--- a/nikey-sneakers/index.html
+++ b/nikey-sneakers/index.html
@@ -72,7 +72,7 @@
       margin: 0 auto;"
       >
         <div class="card top-picks ">
-          <a href="HTML/info.html">
+          <a href="info.html">
            <div class="card-header">
             <img src="./Images/img-Nike1.jpg" class="img-rounded" alt="" width="100%" />
            </div>
@@ -83,7 +83,7 @@
           </a>
         </div>
         <div class="card top-picks ">
-          <a href="HTML/info.html">
+          <a href="info.html">
             <div class="card-header">
               <img src="./Images/img-Nike3.jpg" class="img-rounded" alt="" width="100%" />
             </div>
@@ -94,7 +94,7 @@
           </a>
         </div>
         <div class="card top-picks">
-          <a href="HTML/info.html">
+          <a href="info.html">
            <div class="card-header">
             <img src="./Images/img-Nike5.jpg" class="img-rounded" width="100%" />
            </div>
@@ -105,7 +105,7 @@
           </a>
         </div>
         <div class="card top-picks">
-          <a href="HTML/info.html">
+          <a href="info.html">
             <div class="card-header">
               <img src="./Images/img-Nike10.jpg" class="img-rounded" alt="" width="100%" />
             </div>
@@ -127,7 +127,7 @@
       >
         <div class="col card-category-lg">
           <div class="overlay-image">
-            <a href="HTML/women.html">
+            <a href="women.html">
               <img
                 class="image"
                 src="./Images/img-women5.jpeg"
